; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/cli/extr_cli-script.c_build_command_line.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/cli/extr_cli-script.c_build_command_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.command_line = type { i32, i32, i32, %struct.command_line**, i32* }

@.str = private unnamed_addr constant [38 x i8] c"if/while commands require arguments.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.command_line* (i32, i8*)* @build_command_line to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.command_line* @build_command_line(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.command_line*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = call i32 @error(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %2
  %11 = call i64 @xmalloc(i32 32)
  %12 = inttoptr i64 %11 to %struct.command_line*
  store %struct.command_line* %12, %struct.command_line** %5, align 8
  %13 = load %struct.command_line*, %struct.command_line** %5, align 8
  %14 = getelementptr inbounds %struct.command_line, %struct.command_line* %13, i32 0, i32 4
  store i32* null, i32** %14, align 8
  %15 = load i32, i32* %3, align 4
  %16 = load %struct.command_line*, %struct.command_line** %5, align 8
  %17 = getelementptr inbounds %struct.command_line, %struct.command_line* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 8
  %18 = load %struct.command_line*, %struct.command_line** %5, align 8
  %19 = getelementptr inbounds %struct.command_line, %struct.command_line* %18, i32 0, i32 1
  store i32 1, i32* %19, align 4
  %20 = load %struct.command_line*, %struct.command_line** %5, align 8
  %21 = getelementptr inbounds %struct.command_line, %struct.command_line* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = sext i32 %22 to i64
  %24 = mul i64 8, %23
  %25 = trunc i64 %24 to i32
  %26 = call i64 @xmalloc(i32 %25)
  %27 = inttoptr i64 %26 to %struct.command_line**
  %28 = load %struct.command_line*, %struct.command_line** %5, align 8
  %29 = getelementptr inbounds %struct.command_line, %struct.command_line* %28, i32 0, i32 3
  store %struct.command_line** %27, %struct.command_line*** %29, align 8
  %30 = load %struct.command_line*, %struct.command_line** %5, align 8
  %31 = getelementptr inbounds %struct.command_line, %struct.command_line* %30, i32 0, i32 3
  %32 = load %struct.command_line**, %struct.command_line*** %31, align 8
  %33 = load %struct.command_line*, %struct.command_line** %5, align 8
  %34 = getelementptr inbounds %struct.command_line, %struct.command_line* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = sext i32 %35 to i64
  %37 = mul i64 8, %36
  %38 = trunc i64 %37 to i32
  %39 = call i32 @memset(%struct.command_line** %32, i32 0, i32 %38)
  %40 = load i8*, i8** %4, align 8
  %41 = load i8*, i8** %4, align 8
  %42 = call i32 @strlen(i8* %41)
  %43 = call i32 @savestring(i8* %40, i32 %42)
  %44 = load %struct.command_line*, %struct.command_line** %5, align 8
  %45 = getelementptr inbounds %struct.command_line, %struct.command_line* %44, i32 0, i32 2
  store i32 %43, i32* %45, align 8
  %46 = load %struct.command_line*, %struct.command_line** %5, align 8
  ret %struct.command_line* %46
}

declare dso_local i32 @error(i8*) #1

declare dso_local i64 @xmalloc(i32) #1

declare dso_local i32 @memset(%struct.command_line**, i32, i32) #1

declare dso_local i32 @savestring(i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
